Correct file names

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <img class="logo" src="Images/logo.jpg" alt="logo">
             <div class="header_title">
                 <h1 class="title_upper">Comidas e Sabores</h1>
-                <img src="Images/Daflor.jpg" class="title_lower" alt="da flor">
+                <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
             </div>
             <button class="sidebar-toggle">
                 <i class="fas fa-bars"></i>
@@ -47,7 +47,7 @@
         
     </div>
     <aside class="sidebar">
-        <img src="Images/LogoComplete.jpg" alt="" class="sidebar_logo">
+        <img src="Images/logocomplete.jpg" alt="" class="sidebar_logo">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
