Add header and catering modal media queries

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
     </div>
     <div id="chef" class="modal">
-        <div id="chef-content" class="modal-content">
+        <div id="catering-content" class="modal-content">
             <p class="closeModal close-chef"><i class="fas fa-times"></i></p>
             <br>
             <div class="menu-info">
