Add bold to categories in main text. Rea-arrange foods in modals.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="main_text">
             <p>No <strong>Comidas e Sabores da Flor</strong>, a nossa missão é levar o real sabor brasileiro até a sua casa. Confeccionada com os melhores produtos e temperos, e com muitas pitadas de carinho e dedicação, o <strong>Comidas e Sabores da Flor</strong> se desafia todos os dias um pouco mais para proporcionar aos seus clientes uma comida caseira saborosa e aconchegante.</p>
             <br>
-            <p>Oferecemos uma variedade de serviços individualizados: quentinhas de comidas típicas, petiscos, doces e salgadinhos tradicionais brasileiros e também confeitaria! Além disso, temos um enorme prazer em encarar qualquer desafio culinário que os nossos clientes nos proponham e oferecemos o serviço Chef em casa, para uma comemoração brasileira inigualável nos seus eventos especiais!</p>    
+            <p>Oferecemos uma variedade de serviços individualizados: <strong>quentinhas de comidas típicas</strong>, <strong>petiscos</strong>, <strong>doces e salgadinhos</strong> tradicionais brasileiros e também <strong>confeitaria</strong>! Além disso, temos um enorme prazer em encarar qualquer desafio culinário que os nossos clientes nos proponham e oferecemos o serviço <strong>Chef em casa</strong>, para uma comemoração brasileira inigualável nos seus eventos especiais!</p>    
             <br>
             <p>Seja bem-vindo e veja abaixo amostras do nosso trabalho. Entre em contato através do telefone ou Facebook para realizar a sua encomenda e provar os nossos pratos. Entregamos em Helsinque, Espoo e Vantaa.</p>
         </div>
@@ -211,14 +211,17 @@
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Biscoitos.jpg');">
                         <p class="dish_name">Biscoitos de Manteiga</p>
                     </div>
-                    <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/MiniChoco.jpg');">
-                        <p class="dish_name">Mini Tortas de Chocolate</p>
-                    </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Brigadeiros.jpg');">
                         <p class="dish_name">Brigadeiros</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Cocada.jpg');">
                         <p class="dish_name">Cocada Branca</p>
+                    </div>
+                    <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/MiniChoco.jpg');">
+                        <p class="dish_name">Mini Tortas de Chocolate</p>
+                    </div>
+                    <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/MiniTortas.jpg');">
+                        <p class="dish_name">Mini Tortas de Morango</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Pudim.jpg');">
                         <p class="dish_name">Pudim de Leite Condensado</p>
@@ -258,9 +261,6 @@
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/TortaMorango.jpg');">
                         <p class="dish_name">Torta de Morango</p>
                     </div>
-                    <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/MiniTortas.jpg');">
-                        <p class="dish_name">Mini Tortas de Morango</p>
-                    </div>
                 </div>      
             </div>
         </div>
@@ -270,7 +270,7 @@
             <p class="closeModal close-chef"><i class="fas fa-times"></i></p>
             <br>
             <div class="menu-info">
-                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é conosco! Cozinhamos e servimos a você e aos seus convidados.</p>    
+                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é comigo! Cozinho e sirvo a você e aos seus convidados.</p>    
                 <div class="foods_container">
                     <img class="catering_pic" src="Images/CateringPic.jpg" alt="">
                 </div>      
