Add reviews page not complete.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <aside class="sidebar">
-        <img src="Images/logocomplete.jpg" alt="" class="sidebar_logo">
+        <img src="Images/logocomplete.jpg" loading="lazy" alt="" class="sidebar_logo">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
