--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@
         <div class="about_text">
             <p>Muito prazer! Eu me chamo Elaisa, mais conhecida como Dona Moça ou, simplesmente, Flor. O <strong>Comidas e Sabores da Flor</strong> é o resultado de uma receita com dois ingredientes principais: a satisfação que encontro em cozinhar e o orgulho das minhas origens brasileiras e cariocas.</p> 
             <br>
-            <p>Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Depois de morar no Brasil e na Itália, em 2005 vim para a Finlândia, e não tive dúvidas da profissão que iria seguir. Durante os anos na escola profissional, uni as técnicas aprendidas à experimentação de novas receitas em casa.</p>
+            <p>Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Depois de morar no Brasil e na Itália, em 2005 vim para a Finlândia, e não tive dúvidas da profissão que iria seguir. Durante os anos da escola profissional, fui unindo as técnicas aprendidas à experimentação de novas receitas em casa.</p>
             <img class="about_pic" src="Images/Foto2.jpg" alt="">
             <br>
             <p>Sempre vi a cozinha como um grande laboratório, onde cada prato é inigualável e uma oportunidade de expressão da minha identidade. Por volta de 2016, o que havia começado apenas servindo família e amigos, se transformou num propósito maior, o de proporcionar à comunidade brasileira na capital finlandesa os sabores da terra natal.</p>
             <br>
-            <p>Atualmente, o <strong>Comidas e Sabores da Flor</strong> continua se desenvolvendo a cada encomenda. Os meus clientes – também conhecidos como Flor’mores – são servidos com o mesmo amor e dedicação com os que sirvo a minha própria família. Além das refeições brasileiras, que são a minha marca registrada, recentemente comecei a me aventurar na confeitaria, devido a pedidos.</p>
+            <p>Atualmente, o <strong>Comidas e Sabores da Flor</strong> continua se desenvolvendo a cada encomenda. Os meus clientes – que carinhosamente chamo de Flor’mores – são servidos com o mesmo amor e dedicação com os que sirvo a minha própria família. Além das refeições brasileiras, que são a minha marca registrada, recentemente comecei a me aventurar na confeitaria, devido a pedidos.</p>
             <img class="about_pic" src="Images/Foto4.jpg" alt="">
             <br>
             <p>A confeitaria é uma vertente que adoro e em que me autoeduco constantemente. Nessa área, me inspira saber que sou a única neta a seguir os passos do meu falecido avô, que foi chef na Confeitaria Colombo, no Rio de Janeiro.</p>
