Add Mural to reviews page.

--- a/reviews.html
+++ b/reviews.html
@@ -61,6 +61,15 @@
             </div>
         </div>
     </div>
+
+    <div class="mural">
+        <h2>Mural</h2>
+        <hr class="pink_line">
+        <div class="mural_container">
+            <img class="mural_pic" src="Images/Carro.jpg" alt="">
+        </div>
+        
+    </div>
     
 
     <footer>
