Fix testemunhos link in reviews page. Adjust pictures in food modals.

--- a/reviews.html
+++ b/reviews.html
@@ -34,7 +34,7 @@
                 <a href="about.html">Quem é a Flor</a>
             </li>
             <li>
-                <a id="services_link" href="#quent_link">Serviços</a>
+                <a id="services_link" href="index.html#quent_link">Serviços</a>
             </li>
             <li>
                 <a href="reviews.html">Testemunhos</a>
