--- a/about.html
+++ b/about.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <header>
+        <a href="index.html" class="header_logo">
             <img class="logo" src="Images/logo.jpg" alt="logo">
-            <div class="header_title">
-                <h1 class="title_upper">Comidas e Sabores</h1>
-                <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
-            </div>
-            <button class="sidebar-toggle">
-                <i class="fas fa-bars"></i>
-            </button>  
+        </a>
+        <div class="header_title">
+            <h1 class="title_upper">Comidas e Sabores</h1>
+            <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
+        </div>
+        <button class="sidebar-toggle">
+            <i class="fas fa-bars"></i>
+        </button>  
     </header>
     <div class="about_content">
         <h2>Quem é a Flor</h2>
