--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class="slide_image" id="slide-4" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('Images/RJ4.jpg')"></div>
         </div>
         <header>
-            <img class="logo" src="Images/logo.jpg" alt="logo">
+            <a href="index.html" class="header_logo">
+                <img class="logo" src="Images/logo.jpg" alt="logo">
+            </a>
             <div class="header_title">
                 <h1 class="title_upper">Comidas e Sabores</h1>
                 <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
