--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="Images/logo.jpg" alt="logo">
+        <a href="index.html" class="header_logo">
+            <img class="logo" src="Images/logo.jpg" alt="logo">
+        </a>
         <div class="header_title">
             <h1 class="title_upper">Comidas e Sabores</h1>
             <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
