--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comidas Da Flor</title>
+    <title>Testemunhos</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="stylesheet" type="text/scss" href="CSS/styles.scss">
     <script src="https://kit.fontawesome.com/d94587fbf0.js" crossorigin="anonymous"></script>
