Update testemunhos and mural in reviews page.

--- a/reviews.html
+++ b/reviews.html
@@ -52,15 +52,23 @@
                 <h4 class="review_name">Cristiana</h4>
                 <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Vantaa</p>
             </div>
-            <p class="review_text">A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!</p>    
+            <p class="review_text">"A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!"</p>    
         </div>
         <div class="review_card">
-            <p class="review_text">A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!</p>    
+            <p class="review_text">"A comida da Flor é a experiência completa de visitar o Brasil. Comida excelente, histórias da Flor, e a energia positiva que ela tem. Recomendo pra todos!"</p>    
             <div class="review_person">
-                <img class="review_pic" src="Images/Cris.jpg" alt="">
-                <h4 class="review_name">Cristiana</h4>
-                <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Vantaa</p>
+                <img class="review_pic" src="Images/Daniel.jpg" alt="">
+                <h4 class="review_name">Daniel</h4>
+                <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Helsinki</p>
             </div>
+        </div>
+        <div class="review_card">
+            <div class="review_person">
+                <img class="review_pic" src="Images/Shirlei.jpg" alt="">
+                <h4 class="review_name">Shirlei Bolgenhagen</h4>
+                <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Helsinki</p>
+            </div>
+            <p class="review_text">"A Flor faz a melhor feijoada da Finlândia! Para nós que estamos longe de casa ela oferece muito mais que o sabor do Brasil, sempre com seu sorisso e alegria que transbordam amor na sua comida. Super indico."</p>    
         </div>
     </div>
 
@@ -69,6 +77,7 @@
         <hr class="pink_line">
         <div class="mural_container">
             <img class="mural_pic" src="Images/Carro.jpg" alt="">
+            <img class="mural_pic" src="Images/Mural.jpg" alt="">
         </div>
         
     </div>
