All foods names updated.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="Images/FinlandFlag.svg" alt="Finnish Flag" width="25" height="15">
             <div class="contact_info">
                 <p><i class="fas fa-phone-alt"></i> +358 451274148</p>
-            <p><i class="fab fa-facebook-f"></i> <a href="https://facebook.com/elaisapaixao" target="_blank">Facebook</a></p>
+            <p><i class="fab fa-facebook-f"></i> <a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener">Facebook</a></p>
             </div>
         </div>
     </div>
@@ -124,7 +124,7 @@
                         <p class="dish_name">Strogonoff de Frango</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/SemNome.jpg');">
-                        <p class="dish_name">Name Here</p>
+                        <p class="dish_name">Costela de Porco Cozida</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/CarneAssada.jpg');">
                         <p class="dish_name">Carne Assada</p>
@@ -148,7 +148,7 @@
                         <p class="dish_name">Canja de Galinha</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/ArrozDe.jpg');">
-                        <p class="dish_name">Arroz de</p>
+                        <p class="dish_name">Risotto de Tomates Secos com Cogumelos</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/ArrozCam.jpg');">
                         <p class="dish_name">Arroz de Camarão e Ervilhas</p>
@@ -157,10 +157,10 @@
                         <p class="dish_name">Strogonoff de Carne</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Lombo.jpg');">
-                        <p class="dish_name">Lombo de</p>
+                        <p class="dish_name">Lombo de Porco Assado</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/NoName.jpg');">
-                        <p class="dish_name">Name Here</p>
+                        <p class="dish_name">Frango Xadrez</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/TagliatelleCam.jpg');">
                         <p class="dish_name">Tagliatelle de Camarão</p>
@@ -243,7 +243,7 @@
                         <p class="dish_name">Bolo de Chocolate</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/BoloDe.jpg');">
-                        <p class="dish_name">Bolo de</p>
+                        <p class="dish_name">Bolo de Ninho com Morango</p>
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/BoloMorango.jpg');">
                         <p class="dish_name">Bolo de Morango</p>
