Add another review to testemunhos. Add photos to mural.

--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
         <div id="catering-content" class="modal-content">
             <p class="closeModal close-chef"><i class="fas fa-times"></i></p>
             <br>
-            <div class="menu-info">
-                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é comigo! Cozinho e sirvo a você e aos seus convidados.</p>    
-                <div class="foods_container">
+            <div class="catering-info">
+                <p class="food_intro">Quer celebrar um evento com os amigos sem ter muito trabalho? A única coisa que tem de fazer é encomendar o menu desejado e o resto é comigo! Cozinho e sirvo a você e aos seus convidados.</p>            
+                <div class="catering_picture">
                     <img class="catering_pic" src="Images/CateringPic.jpg" alt="">
-                </div>      
+                </div>
             </div>
         </div>
     </div>
