--- a/reviews.html
+++ b/reviews.html
@@ -65,10 +65,18 @@
         <div class="review_card">
             <div class="review_person">
                 <img class="review_pic" src="Images/Shirlei.jpg" alt="">
-                <h4 class="review_name">Shirlei Bolgenhagen</h4>
+                <h4 class="review_name">Shirlei</h4>
                 <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Helsinki</p>
             </div>
             <p class="review_text">"A Flor faz a melhor feijoada da Finlândia! Para nós que estamos longe de casa ela oferece muito mais que o sabor do Brasil, sempre com seu sorisso e alegria que transbordam amor na sua comida. Super indico."</p>    
+        </div>
+        <div class="review_card">
+            <p class="review_text">"Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece"</p>    
+            <div class="review_person">
+                <img class="review_pic" src="Images/AliceEsk.jpg" alt="">
+                <h4 class="review_name">Alice</h4>
+                <p class="review_location"><img class="location_pic" src="Images/Location.svg" alt=""></img>Helsinki</p>
+            </div>
         </div>
     </div>
 
@@ -78,6 +86,8 @@
         <div class="mural_container">
             <img class="mural_pic" src="Images/Carro.jpg" alt="">
             <img class="mural_pic" src="Images/Mural.jpg" alt="">
+            <img class="mural_pic" src="Images/BoloM.jpg" alt="">
+            <img class="mural_pic" src="Images/AliceClient.jpg" alt="">
         </div>
         
     </div>
