--- a/por/about.html
+++ b/por/about.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é a Flor?</title>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
-    <link rel="stylesheet" type="text/scss" href="CSS/styles.scss">
+    <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
     <script src="https://kit.fontawesome.com/d94587fbf0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <a href="index.html" class="header_logo">
-            <img class="logo" src="Images/logo.jpg" alt="logo">
+            <img class="logo" src="/Images/logo.jpg" alt="logo">
         </a>
         <div class="header_title">
             <h1 class="title_upper">Comidas e Sabores</h1>
-            <img src="Images/daflor.jpg" class="title_lower" alt="da flor">
+            <img src="/Images/daflor.jpg" class="title_lower" alt="da flor">
         </div>
         <button class="sidebar-toggle">
             <i class="fas fa-bars"></i>
@@ -31,18 +30,18 @@
             <br>
             <p>Cozinhar sempre me despertou a curiosidade e me trouxe um enorme prazer. Depois de morar no Brasil e na Itália, em 2005 vim para a Finlândia, e não tive dúvidas da profissão que iria seguir. Durante os anos da escola profissional, fui unindo as técnicas aprendidas à experimentação de novas receitas em casa.</p>
             <div class="first_doub">
-                <img class="about_pic" src="Images/Foto2.jpg" alt="">
+                <img class="about_pic" src="/Images/Foto2.jpg" alt="">
                 <p class="doub_text">Sempre vi a cozinha como um grande laboratório, onde cada prato é inigualável e uma oportunidade de expressão da minha identidade. Por volta de 2016, o que havia começado apenas servindo família e amigos, se transformou num propósito maior, o de proporcionar à comunidade brasileira na capital finlandesa os sabores da terra natal.</p>
             </div>
             <p>Atualmente, o <strong>Comidas e Sabores da Flor</strong> continua se desenvolvendo a cada encomenda. Os meus clientes – que carinhosamente chamo de Flor’mores – são servidos com o mesmo amor e dedicação com os que sirvo a minha própria família. Além das refeições brasileiras, que são a minha marca registrada, recentemente comecei a me aventurar na confeitaria, devido a pedidos.</p>
             <div class="second_doub">
-                <img class="about_pic" src="Images/Foto4.jpg" alt="">
+                <img class="about_pic" src="/Images/Foto4.jpg" alt="">
                 <p class="doub_text">A confeitaria é uma vertente que adoro e em que me autoeduco constantemente. Nessa área, me inspira saber que sou a única neta a seguir os passos do meu falecido avô, que foi chef na Confeitaria Colombo, no Rio de Janeiro.</p>
             </div>
             <br>
             <p>Para mim, cozinhar é sinônimo de afeto e, por isso, prefiro seguir a minha intuição do que reproduzir receitas prontas. Algo que me dá gosto é corresponder aos desafios lançados pelos amigos e clientes. Por isso, também experimento na culinária italiana, tailandesa, indiana e finlandesa.</p>
             <div class="third_doub">
-                <img class="about_pic" src="Images/Foto3.jpg" alt="">
+                <img class="about_pic" src="/Images/Foto3.jpg" alt="">
                 <p class="doub_text">Hoje, me sinto uma pessoa muito realizada. Tenho clientes brasileiros assíduos, assim como de outras nacionalidades, interessados nos sabores do meus país. Moro com o meu marido, italiano, e o meu filho pré-adolescente em Helsinque, e não trocaria essa realidade por nada nesse mundo.</p>
             </div>
             <br>
@@ -51,7 +50,7 @@
         
     </div>
     <aside class="sidebar">
-        <img src="Images/logocomplete.jpg" alt="" class="sidebar_logo">
+        <img src="/Images/logocomplete.jpg" alt="" class="sidebar_logo">
         <button class="close-btn">
             <i class="fas fa-times"></i>
         </button>
@@ -66,7 +65,7 @@
                 <a id="services_link" href="index.html#quent_link">Serviços</a>
             </li>
             <li>
-                <a href="reviews.html">Reviews</a>
+                <a href="reviews.html">Testemunhos</a>
             </li>
         </ul>
     </aside>
@@ -79,6 +78,6 @@
     </footer>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="JS/script.js"></script>
+    <script type="text/javascript" src="/JS/script.js"></script>
 </body>
 </html>
