--- a/por/reviews.html
+++ b/por/reviews.html
@@ -29,13 +29,13 @@
         </button>
         <ul class="links">
             <li>
-                <a href="index.html">O Nosso Trabalho</a>
+                <a href="../index.html">O Nosso Trabalho</a>
             </li>
             <li>
                 <a href="about.html">Quem é a Flor</a>
             </li>
             <li>
-                <a id="services_link" href="index.html#quent_link">Serviços</a>
+                <a id="services_link" href="../index.html#quent_link">Serviços</a>
             </li>
             <li>
                 <a href="reviews.html">Testemunhos</a>
