--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 <a href="index.html">O Nosso Trabalho</a>
             </li>
             <li>
-                <a href="about.html">Quem é a Flor</a>
+                <a href="por/about.html">Quem é a Flor</a>
             </li>
             <li>
                 <a id="services_link" href="#quent_link">Serviços</a>
             </li>
             <li>
-                <a href="reviews.html">Testemunhos</a>
+                <a href="por/reviews.html">Testemunhos</a>
             </li>
         </ul>
     </aside>
