Change link path to english version.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="Images/BrazilFlag.svg" width=25 height=25 alt=""> 
                 <p class="language active">Por</p>
             </a>
-            <a href="../eng/index.html">
+            <a href="eng/index.html">
                 <img src="Images/UKFlag.svg" width=25 height=25 alt=""> 
                 <p class="language">Eng</p>
             </a>
