--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <p>Helsinque, Espoo e Vantaa</p>
             <img src="Images/FinlandFlag.svg" alt="Finnish Flag" width="25" height="15">
             <div class="contact_info">
-                <p><i class="fas fa-phone-alt"></i> +358 451274148</p>
-            <p><i class="fab fa-facebook-f"></i> <a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener">Facebook</a></p>
+                <p><img class="contact_ico" src="/Images/Phone.svg" alt=""> +358 451274148</p>
+                <p><img class="contact_ico" src="/Images/Facebook.svg" alt=""><a href="https://facebook.com/elaisapaixao" target="_blank" rel="noopener"> Facebook</a></p>
             </div>
         </div>
     </div>
@@ -236,6 +236,9 @@
                     </div>
                     <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/Pudim.jpg');">
                         <p class="dish_name">Pudim de Leite Condensado</p>
+                    </div>
+                    <div class="food_pic" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('Images/BolinhosBacalhau.jpg');">
+                        <p class="dish_name">Bolinhos de Bacalhau</p>
                     </div>
                 </div>
             </div>
