--- a/por/reviews.html
+++ b/por/reviews.html
@@ -51,10 +51,10 @@
                 <h4 class="review_name">Cristiana</h4>
                 <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Vantaa</p>
             </div>
-            <p class="review_text">"A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!"</p>    
+            <p class="review_text">“A comida da Flor é uma verdadeira viagem até o Brasil! Além do sabor, gosto muito da boa disposição e do profissionalismo da Flor, sempre preocupada em corresponder ao que foi pedido. Sou fã do bobó de camarão, é o meu preferido!”</p>    
         </div>
         <div class="review_card">
-            <p class="review_text">"A comida da Flor é a experiência completa de visitar o Brasil. Comida excelente, histórias da Flor, e a energia positiva que ela tem. Recomendo pra todos!"</p>    
+            <p class="review_text">“A comida da Flor é a experiência completa de visitar o Brasil. Comida excelente, histórias da Flor, e a energia positiva que ela tem. Recomendo pra todos!”</p>    
             <div class="review_person">
                 <img class="review_pic" src="../Images/Daniel.jpg" alt="">
                 <h4 class="review_name">Daniel</h4>
@@ -67,15 +67,23 @@
                 <h4 class="review_name">Shirlei</h4>
                 <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
             </div>
-            <p class="review_text">"A Flor faz a melhor feijoada da Finlândia! Para nós que estamos longe de casa ela oferece muito mais que o sabor do Brasil, sempre com seu sorisso e alegria que transbordam amor na sua comida. Super indico."</p>    
+            <p class="review_text">“A Flor faz a melhor feijoada da Finlândia! Para nós que estamos longe de casa ela oferece muito mais que o sabor do Brasil, sempre com seu sorisso e alegria que transbordam amor na sua comida. Super indico.”</p>    
         </div>
         <div class="review_card">
-            <p class="review_text">"Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece"</p>    
+            <p class="review_text">“Que bom ter uma comidinha brasileira feita com tanto carinho. O mais importante é ter certeza de ser sempre bem atendida pela nossa Flor. Meu netinho agradece.”</p>    
             <div class="review_person">
                 <img class="review_pic" src="../Images/AliceEsk.jpg" alt="">
                 <h4 class="review_name">Alice</h4>
                 <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Helsinki</p>
             </div>
+        </div>
+        <div class="review_card">
+            <div class="review_person">
+                <img class="review_pic" src="../Images/Taysa.jpg" alt="">
+                <h4 class="review_name">Taysa</h4>
+                <p class="review_location"><img class="location_pic" src="../Images/Location.svg" alt=""></img>Espoo</p>
+            </div>
+            <p class="review_text">“O Comidas e Sabores da Flor trouxe um pouco do sabor do Brasil para a Finlândia. O atendimento é maravilhoso, basta conhecer um pouco a Flor para ter certeza disso, e os quitutes sensacionais. Ela faz sempre seu melhor para atender aos gostos e desejos dos clientes. Recomendo demais!”</p>    
         </div>
     </div>
 
